<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_lite">Find My Car Lite</string>
    <string name="yay">YAY!!!</string>
    <string name="found_car">You Have Found Your Car!</string>
    <string name="ok">Okay</string>
    <string name="help">Help</string>
    <string name="welcome">Welcome to Find My Car!</string>
    <string name="welcome_msg">Find My Car will help you find your car no matter where you are. Just hit the button with the man holding a flag to mark your car. Swipe the bar at the top left and right to access Navigation and Notes. If you enjoy our work or have any questions feel free to email us at TwentyCodes@gmail.com. Enjoy!</string>
    <string name="no_gps_signal">Sorry but you don\'t have a proper GPS signal yet. Please try again in a few moments.</string>
    <string name="mark_car_warning">Would you like to remove your existing car and notes to create a new one?</string>
    <string name="measurement_unit_dialog">Select A Measurement Unit</string>
    <string name="mark_car_first">Please mark a car first.</string>
    <string name="stay_awake_dialog">Do you Want The Screen To Stay On?</string>
    <string name="stay_awake_on">Stay Awake is ON</string>
    <string name="stay_awake_off">Stay Awake is OFF</string>
    <string name="quit_dialog">Are you sure you want to quit?</string>
    <string name="mark_car">Mark Car</string>
    <string name="my_location">My Location</string>
    <string name="car_location">Car Location</string>
    <string name="show_both">Show Both</string>
    <string name="quit">Quit</string>
    <string name="layers">Layers</string>
    <string name="stay_awake">Stay Awake</string>
    <string name="measurement_unit">Measurement Unit</string>
    <string name="layers_dialog">Select A Layer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_car">Delete Car</string>
    <string name="delete_car_dialog">Are you sure you want to delete the current car location, along with it\'s notes, and parking timer?</string>
    <string name="distance">Distance to Car:</string>
    <string name="mark_car_button"> Mark Car </string>
    <string name="notes">Notes</string>
    <string name="show_notes">Show Notes</string>
    <string name="set_timer">Parking Timer</string>
    <string name="parking_timer">Parking Timer</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="notify_me">Notify me</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="before">minutes before the alarm.</string>
    <string name="setTimer">  Set Timer  </string>
    <string name="removeTimer">  Remove Timer  </string>
    <string name="pick_an_option">Pick an Option</string>
    <string name="set_timer_warning">You already have a timer set. Please select Remove Timer to remove your existing timer</string>
    <string name="pick_time_greaterthan_zero">Please enter a time greater than 0</string>
    <string name="timer_set_for">Timer set for </string>
    <string name="timer_set_for_hours"> hours and </string>
    <string name="timer_set_for_minutes"> minutes.</string>
    <string name="timer_already_set">There is already a timer started. Please stop the current timer before starting a new one.</string>
    <string name="quit_timer">Quit Timer</string>
    <string name="parking_timer_service">There is a Parking Timer already set. Please stop the existing timer before starting a new one.</string>
    <string name="no_timer">There is no timer to remove.</string>
    <string name="your_time_up_ticket">Your Parking Timer Is Up!!!</string>
    <string name="your_timer_up_title">Your parking timer is up</string>
    <string name="your_timer_up_msg">It\'s time to feed the meter!</string>
    <string name="your_timer_almost_up_ticket">Your parking timer is almost up!</string>
    <string name="your_timer_almost_up_title">It\'s almost time!</string>
    <string name="your_timer_almost_up_msg">It\'s almost time to feed the meter!</string>
    <string name="car_management">Car Management</string>
    <string name="timer_canceled">Parking timer has been canceled</string>
    <string name="pick_timer_lessthan_24">Please enter a time less than 24 hours</string>
    <string name="gps_fix">Acquiring GPS Fix</string>
    <string name="directions">Navigation</string>
    <string name="gps_is_disabled">Your GPS is currently disabled, do you want to go to the settings page to enable it?</string>
    <string name="gps_accuracy">GPS Accuracy:</string>
    <string name="compass">Compass Of What You Want Really Badly</string>
    <string name="update_interval_updated_to">The Parking timer will update every</string>
    <string name="seconds"> seconds.</string>
    <string name="the_vaule_was_not_a_number_update_interval_60">The value you entered was not a number, update interval was set to 60 seconds.</string>
    <string name="prevent_phone_from_sleeping">Prevent the phone from sleeping</string>
    <string name="fmc_options">Find My Car Full Options</string>
    <string name="parking_timer_options">Parking Timer Options</string>
    <string name="update_interval">Update Interval</string>
    <string name="update_interval_summary">Parking Timer Notification update interval in seconds</string>
    <string name="ongoing_notification">Ongoing Notification</string>
    <string name="feature_in_fmc_full">Only in Full Version</string>
    <string name="directions_description">This feature will display the shortest walking path between you and your car. Do you want to purchase the full version now?</string>
    <string name="parking_timer_description">Parking Timer allows you to set a timer for when your Parking Meter is up. Do you want to purchase the full version now?</string>

    <!-- Parking Notification Settings -->
    <string name="notification_color_title">Notification Color</string>
    <string name="notification_color_black">Black</string>
    <string name="notification_color_white">White</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="new_button">New</string>
    <string name="app_name">Find My Car</string>

    <!-- License specific strings -->
    <string name="not_licensed">This application is not licensed. Select Menu -> Check License for more info.</string>
    <string name="application_error">Application error: %1$s</string>
    <string name="not_licensed_full">I\'m sorry but this phone did not pass the license check. You can continue to use Find My Car but you will be limited in features. To try the license check again press the Menu key then select Check License. You can also select Help below for more information.</string>
    <string name="check_license">Check License</string>
    <string name="compass_optoions">Compass Options</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="eula">End-User License Agreement</string>
    <string name="eulaagreement">&lt;insert eula here></string>
    <string name="feature_in_fmc_full_description">This feature is only available in the full version. Do you want to purchase the full version now?</string>
    <string name="default_location">Car</string>
    <string name="deleteing">Deleteing…</string>
    <string name="calculating">Calculating…</string>
    <string name="map_mode">Map Mode</string>
    <string name="version_info">Version Information</string>
    <string name="saved">Saved</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="directions_empty_msg">Your directions will appear here. Please select the Navigation Icon in the lower right of the map to use navigation.</string>
    <string name="nav_only_in_full">The Navigation feature is used to display walking directions to your car. This fetaure is only available in the full version of Find My Car. Please visit the Android Market to purchase Find My Car. </string>
    <string name="store_your_notes_here">You can store your notes here…</string>

</resources>