<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/distance_background"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <com.TwentyCodes.android.FindMyCarLib.UI.DelegatedImageButton
            android:id="@+id/my_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/my_location_action_bar"
            android:contentDescription="@string/my_location"
            android:duplicateParentState="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <com.TwentyCodes.android.FindMyCarLib.UI.DelegatedImageButton
            android:id="@+id/mark_my_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/mark_my_location_action_bar"
            android:contentDescription="@string/mark_car"
            android:duplicateParentState="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <com.TwentyCodes.android.FindMyCarLib.UI.DelegatedImageButton
            android:id="@+id/show_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@drawable/car_action_bar"
            android:duplicateParentState="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <com.TwentyCodes.android.FindMyCarLib.UI.DelegatedImageButton
            android:id="@+id/parking_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/time_action_bar"
            android:contentDescription="@string/parking_timer"
            android:duplicateParentState="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <com.TwentyCodes.android.FindMyCarLib.UI.DelegatedImageButton
            android:id="@+id/directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/nav_action_bar"
            android:contentDescription="@string/directions"
            android:duplicateParentState="true" />
    </RelativeLayout>

</LinearLayout>